--- a/index.html
+++ b/index.html
@@ -336,27 +336,30 @@ const nepalData = Array.from({length:40},(_,i)=>({idx:i,title:`Nepál ${i+1}`,im
 /* ---------- MODAL ---------- */
 const modal=document.getElementById('modal-backdrop');
 const modalContent=document.getElementById('modal-content');
-modal.onclick=e=>{if(e.target===modal)closeModal();};
+
 function closeModal(){
   modal.classList.remove('show');
   modal.querySelector('.modal').classList.remove('fullscreen');
-  setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';},150);
-  document.body.style.overflow='';
+  setTimeout(()=>{
+    modal.hidden=true;
+    modalContent.innerHTML='';
+    document.body.style.overflow='';
+  },180);
 }
 function openModal(html,isFullscreen=false){
   const box=modal.querySelector('.modal');
   box.classList.toggle('fullscreen',isFullscreen);
   modalContent.innerHTML=html;
   modal.hidden=false;
-  setTimeout(()=>modal.classList.add('show'),10);
-  document.body.style.overflow='hidden';
+  requestAnimationFrame(()=>{
+    modal.classList.add('show');
+    document.body.style.overflow='hidden';
+  });
 }
+modal.addEventListener('click', e=>{ if(e.target===modal) closeModal(); });
 
 /* ---------- DETAIL: KORUNA / ALPY ---------- */
-let currentSection="",currentIndex=0;
 function showDetail(data,i,imgFn){
-  currentSection=data;
-  currentIndex=i;
   const it=data[i];
   const datumCas=[it.d,it.cas].filter(Boolean).join(", ")+(it.cas?" hod":"");
   openModal(`
@@ -418,6 +421,50 @@ function show(route){
 btns.forEach(b=>b.addEventListener('click',()=>show(b.dataset.route)));
 window.addEventListener('popstate',()=>show(location.hash.substring(1)||'koruna'));
 show(location.hash?location.hash.substring(1):'koruna');
+
+/* ---------- NEPÁL FULLSCREEN ---------- */
+let nepalIndex=0;
+function openNepalModal(i){
+  nepalIndex=i;
+  openModal(`
+    <button class="nav-arrow left" id="nav-left">❮</button>
+    <button class="nav-arrow right" id="nav-right">❯</button>
+    <h3 id="nepal-title"></h3>
+    <button class="modal-close" id="modal-close">✕</button>
+    <img class="main" id="nepal-main" src="">
+  `,true);
+  document.getElementById('modal-close').onclick=closeModal;
+  document.getElementById('nav-left').onclick=e=>{e.stopPropagation();changeNepal(-1);};
+  document.getElementById('nav-right').onclick=e=>{e.stopPropagation();changeNepal(1);};
+  updateNepalModal();
+}
+function changeNepal(dir){nepalIndex=(nepalIndex+dir+nepalData.length)%nepalData.length;updateNepalModal();}
+function updateNepalModal(){
+  const it=nepalData[nepalIndex];
+  document.getElementById('nepal-main').src=it.img;
+  document.getElementById('nepal-title').textContent=`${it.title} (${nepalIndex+1}/${nepalData.length})`;
+}
+/* Gesta */
+let touchStartX=0,touchEndX=0,touchStartY=0,touchEndY=0;
+document.addEventListener("touchstart",e=>{
+  touchStartX=e.changedTouches[0].screenX;
+  touchStartY=e.changedTouches[0].screenY;
+},false);
+document.addEventListener("touchend",e=>{
+  touchEndX=e.changedTouches[0].screenX;
+  touchEndY=e.changedTouches[0].screenY;
+  handleGesture();
+},false);
+function handleGesture(){
+  if(!modal.classList.contains("show"))return;
+  const dx=touchEndX-touchStartX;
+  const dy=touchEndY-touchStartY;
+  if(Math.abs(dx)>Math.abs(dy)){
+    if(Math.abs(dx)>50){dx>0?changeNepal(-1):changeNepal(1);}
+  }else{
+    if(Math.abs(dy)>60){closeModal();}
+  }
+}
 </script>
 </body>
 </html>
