--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@ const imgKoruna=i=>`${RAW}/Koruna/Koruna${String(i).padStart(2,'0')}.jpg`;
 const imgAlpy=i=>`${RAW}/4000/ctyrtisicovka${String(i).padStart(2,'0')}.jpg`;
 const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 
-/* ---------- Data: Koruna Evropy ----------
-   (ponecháno jako dřív, můžeš doplňovat imgs:[…] kde chceš) */
+/* ---------- Data: Koruna Evropy ---------- */
 const korunaData = [
 {p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[1,2,3,4],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Monte Rosa",imgs:[5,6],povidani:"Popis výstupu bude ještě doplněn"},
@@ -297,8 +296,7 @@ const korunaData = [
 {p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",imgs:[69],povidani:"Popis výstupu bude ještě doplněn"}
 ];
 
-/* ---------- Data: Alpy 4000 ----------
-   (verze s imgs:[…] připravená pro 2–6 fotek; můžeš libovolně doplňovat) */
+/* ---------- Data: Alpy 4000 ---------- */
 const alpyData = [
 {p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[1,2,3,4],povidani:""},
 {p:"2",hora:"Mont Blanc di Courmayeur",v:"4 765",z:"Itálie",obt:"B+",pohori:"Mont Blank",imgs:[5,6],povidani:""},
@@ -402,14 +400,15 @@ function openModal(html,isFullscreen=false){
 }
 modal.addEventListener('click',e=>{if(e.target===modal)closeModal();});
 
-/* --- Detail: Koruna / Alpy (více fotek do mřížky) --- */
-function buildImgGrid(imgFn, nums, alt){
+/* --- Detail: Koruna / Alpy (více fotek do mřížky + klik na fullscreen) --- */
+function buildImgGrid(imgFn, nums, alt, parentIndex, type){
   const safe = (Array.isArray(nums) && nums.length ? nums : []).slice(0,6);
-  if(!safe.length) return `<div class="img-grid"><img class="grid-img" src="${imgFn(1)}" alt="${alt}" loading="lazy"></div>`;
-  const items = safe.map(n=>`<img class="grid-img" src="${imgFn(n)}" alt="${alt}" loading="lazy">`).join('');
+  if(!safe.length) return `<div class="img-grid"><img class="grid-img" src="${imgFn(1)}" alt="${alt}" loading="lazy" onclick="openPhotoFullscreen('${type}',${parentIndex},0)"></div>`;
+  const items = safe.map((n,idx)=>`<img class="grid-img" src="${imgFn(n)}" alt="${alt}" loading="lazy" onclick="openPhotoFullscreen('${type}',${parentIndex},${idx})">`).join('');
   return `<div class="img-grid">${items}</div>`;
 }
-function showDetail(data, i, imgFn) {
+
+function showDetail(data, i, imgFn, type) {
   const it = data[i];
   const povidaniText = it.povidani && it.povidani.trim() !== "" ? it.povidani : "Popis výstupu bude ještě doplněn";
   const meta = `
@@ -420,14 +419,13 @@ function showDetail(data, i, imgFn) {
     ${it.obt ? `<div>Obtížnost:</div><div>${it.obt}</div>` : ""}
     ${it.pohori ? `<div>Pohoří:</div><div>${it.pohori}</div>` : ""}
   `;
-  // pokud není definované imgs, použij fotku dané karty
   const imgs = Array.isArray(it.imgs) && it.imgs.length ? it.imgs : [i+1];
   openModal(`
     <button class="modal-close" onclick="closeModal()">✕</button>
     <h3>${it.p}/${data.length} – ${it.hora} ${it.v ? `${it.v} m` : ""}</h3>
     <hr>
     <div class="meta-grid">${meta}</div>
-    ${buildImgGrid(imgFn, imgs, it.hora)}
+    ${buildImgGrid(imgFn, imgs, it.hora, i, type)}
     <div class="povidani">${povidaniText}</div>
   `);
 }
@@ -441,7 +439,7 @@ function cardKoruna(it,i){
     <div class="photo-title">${it.p}. ${it.hora} ${it.v?`${it.v} m`:""}</div>
     <div class="photo-sub">${it.z||""} ${it.d||""}</div>
   </div>`;
-  el.onclick=()=>showDetail(korunaData,i,imgKoruna);
+  el.onclick=()=>showDetail(korunaData,i,imgKoruna,'koruna');
   return el;
 }
 function cardAlpy(it,i){
@@ -452,7 +450,7 @@ function cardAlpy(it,i){
     <div class="photo-title">${it.p}. ${it.hora} ${it.v?`${it.v} m`:""}</div>
     <div class="photo-sub">${it.z||""} ${it.d||""}</div>
   </div>`;
-  el.onclick=()=>showDetail(alpyData,i,imgAlpy);
+  el.onclick=()=>showDetail(alpyData,i,imgAlpy,'alpy');
   return el;
 }
 function cardSimple(it,i){
@@ -515,6 +513,42 @@ function updateNepalModal(first=false){
   },first?0:150);
 }
 
+/* --- Fullscreen fotky pro Korunu a Alpy --- */
+let photoIndex=0, currentImgs=[], currentImgFn=null, currentTitle="";
+function openPhotoFullscreen(type,index,imgIdx){
+  const data=(type==='koruna'?korunaData:alpyData);
+  const it=data[index];
+  currentImgs=it.imgs||[index+1];
+  currentImgFn=(type==='koruna'?imgKoruna:imgAlpy);
+  currentTitle=it.hora;
+  photoIndex=imgIdx;
+  openModal(`
+    <button class="nav-arrow left" id="photo-left">❮</button>
+    <button class="nav-arrow right" id="photo-right">❯</button>
+    <h3 id="photo-title"></h3>
+    <button class="modal-close" id="photo-close">✕</button>
+    <img class="main fade" id="photo-main" src="">
+  `,true);
+  document.getElementById('photo-close').onclick=closeModal;
+  document.getElementById('photo-left').onclick=e=>{e.stopPropagation();changePhoto(-1);};
+  document.getElementById('photo-right').onclick=e=>{e.stopPropagation();changePhoto(1);};
+  updatePhotoModal(true);
+}
+function changePhoto(dir){
+  photoIndex=(photoIndex+dir+currentImgs.length)%currentImgs.length;
+  updatePhotoModal();
+}
+function updatePhotoModal(first=false){
+  const img=document.getElementById('photo-main');
+  const title=document.getElementById('photo-title');
+  if(!first) img.classList.remove('show');
+  setTimeout(()=>{
+    img.src=currentImgFn(currentImgs[photoIndex]);
+    title.textContent=`${currentTitle} – foto ${photoIndex+1}/${currentImgs.length}`;
+    img.onload=()=>img.classList.add('show');
+  },first?0:150);
+}
+
 /* --- Gesta + klávesnice --- */
 let touchStartX=0,touchEndX=0,touchStartY=0,touchEndY=0;
 document.addEventListener("touchstart",e=>{
@@ -530,19 +564,31 @@ function handleGesture(){
   if(!modal.classList.contains("show"))return;
   const dx=touchEndX-touchStartX;
   const dy=touchEndY-touchStartY;
-  if(Math.abs(dx)>Math.abs(dy)){
-    if(Math.abs(dx)>50){dx>0?changeNepal(-1):changeNepal(1);}
-  }else{
-    if(Math.abs(dy)>60){closeModal();}
+  const box=modal.querySelector('.modal');
+  if(box.classList.contains('fullscreen')){
+    if(Math.abs(dx)>Math.abs(dy)){
+      if(Math.abs(dx)>50){
+        if(document.getElementById('photo-main')) dx>0?changePhoto(-1):changePhoto(1);
+        else dx>0?changeNepal(-1):changeNepal(1);
+      }
+    }else{
+      if(Math.abs(dy)>60)closeModal();
+    }
   }
 }
 document.addEventListener('keydown',e=>{
   const box=modal.querySelector('.modal');
   if(!modal.classList.contains('show'))return;
   if(box.classList.contains('fullscreen')){
-    if(e.key==='ArrowLeft')changeNepal(-1);
-    else if(e.key==='ArrowRight')changeNepal(1);
-    else if(e.key==='Escape')closeModal();
+    if(document.getElementById('photo-main')){
+      if(e.key==='ArrowLeft')changePhoto(-1);
+      else if(e.key==='ArrowRight')changePhoto(1);
+      else if(e.key==='Escape')closeModal();
+    }else{
+      if(e.key==='ArrowLeft')changeNepal(-1);
+      else if(e.key==='ArrowRight')changeNepal(1);
+      else if(e.key==='Escape')closeModal();
+    }
   }
 });
 </script>
